fixed inline js on employee.js

--- a/ERS_Project_1/src/main/webapp/Partials/employee.html
+++ b/ERS_Project_1/src/main/webapp/Partials/employee.html
@@ -28,7 +28,7 @@
 
   <div id="app-view">
         <div id="mySidenav" class="sidenav">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <a href="javascript:void(0)" class="closebtn" id="close-btn">&times;</a>
                 <a href="#">About</a>
                 <a href="#">Services</a>
                 <a href="#">Clients</a>
@@ -36,7 +36,7 @@
               </div>
               
               <div id="main">
-                <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+                <span id = "open-btn">&#9776; open</span>
               </div>
   
   </div>
