--- a/ERS_Project_1/src/main/webapp/Partials/employee.html
+++ b/ERS_Project_1/src/main/webapp/Partials/employee.html
@@ -2,49 +2,50 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>ERS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  
-  <link rel="stylesheet" type="text/css" media="screen" href="../css/app.css">
-  <link rel="stylesheet" type="text/css" href="../css/employee.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>ERS</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/app.css">
+    <link rel="stylesheet" type="text/css" href="../css/employee.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <!-- Brand/logo -->
-    <a class="navbar-brand" href="#"><img src="C:\Users\marco\Desktop\Revature Training\Project 1 github\Revature-Project-1\ERS_Project_1\src\main\resources\logo.png" id="logo" /></a>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <!-- Brand/logo -->
+        <a class="navbar-brand" href="#"><img
+                src="C:\Users\marco\Desktop\Revature Training\Project 1 github\Revature-Project-1\ERS_Project_1\src\main\resources\logo.png"
+                id="logo" /></a>
 
-    <!-- Links -->
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
-      </li>
-      </li>
-    </ul>
-  </nav>
+        <!-- Links -->
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+            </li>
+            </li>
+        </ul>
+    </nav>
 
-  <div id="app-view">
+    <div id="app-view">
         <div id="mySidenav" class="sidenav">
-                <a href="javascript:void(0)" class="closebtn" id="close-btn">&times;</a>
-                <a href="#">About</a>
-                <a href="#">Services</a>
-                <a href="#">Clients</a>
-                <a href="#">Contact</a>
-              </div>
-              
-              <div id="main">
-                <span id = "open-btn">&#9776; open</span>
-              </div>
-  
-  </div>
-  <script id="dynamic-js" src="../js/employee.js"></script>
+            <a href="javascript:void(0)" class="closebtn" id="close-btn">&times;</a>
+            <a href="#">View your current Reimbursements</a>
+            <a href="#">View your past Reimbursements</a>
+            <a href="#">Logout</a>
+        </div>
+
+        <div id="main">
+            <span id="open-btn">&#9776; open</span>
+        </div>
+
+    </div>
+    <script id="dynamic-js" src="../js/employee.js"></script>
     <script src="../js/app.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
