--- a/ERS_Project_1/src/main/webapp/Partials/employee.html
+++ b/ERS_Project_1/src/main/webapp/Partials/employee.html
@@ -1,135 +1,97 @@
-<!DOCTYPE html>
-<html>
+<div id="app-view">
+  <div id="sidebar_bg">
+    <div id="mySidenav" class="sidebar">
+      <a href="#">View your current Reimbursements</a>
+      <a href="#">View your past Reimbursements</a>
+      <a href="#" data-toggle="modal" data-target="#reimbModal">Submit a new Reimbursement</a>
+      <a href="#">Logout</a>
+    </div>
+  </div>
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ERS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <div id="main" class="content">
+    <h1> Welcome Back Please select what you would like to do from our sidebar</h1>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/app.css">
-    <link rel="stylesheet" type="text/css" href="../css/employee.css">
-</head>
 
-<body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-        <!-- Brand/logo -->
-        <a class="navbar-brand" href="#"><img
-                src="C:\Users\marco\Desktop\Revature Training\Project 1 github\Revature-Project-1\ERS_Project_1\src\main\resources\logo.png"
-                id="logo" /></a>
+    <div id="pending">
+      <table class="table table-dark table-striped">
+        <thead>
+          <tr>
+            <th>Reimbursement Id</th>
+            <th>Amount</th>
+            <th>Description</th>
+            <th>Type</th>
+            <th>Date</th>
+            <!-- Order by Date Submitted-->
+          </tr>
+        </thead>
+        <tbody>
 
-        <!-- Links -->
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
-            </li>
-            </li>
-        </ul>
-    </nav>
+        </tbody>
+      </table>
+    </div>
 
-    <div id="app-view">
-      <div id="sidebar_bg">
-        <div id="mySidenav" class="sidebar">
-            <a href="#">View your current Reimbursements</a>
-            <a href="#">View your past Reimbursements</a>
-            <a href="#" data-toggle="modal" data-target="#reimbModal">Submit a new Reimbursement</a>
-            <a href="#">Logout</a>
-        </div>
-      </div>
+    <div id="past">
+      <table class="table table-dark table-striped">
+        <thead>
+          <tr>
+            <th>Reimbursement Id</th>
+            <th>Amount</th>
+            <th>Description</th>
+            <th>Type</th>
+            <th>Date</th>
+            <th>Status</th>
+            <th>Resolver</th>
+            <!-- Order by Date Submitted-->
+          </tr>
+        </thead>
+        <tbody>
 
-        <div id="main" class="content">
-            <h1> Welcome Back Please select what you would like to do from our sidebar</h1>
-        
+        </tbody>
+      </table>
+    </div>
 
-        <div id="pending">
-                <table class="table table-dark table-striped">
-                        <thead>
-                          <tr>
-                            <th>Reimbursement Id</th>
-                            <th>Amount</th>
-                            <th>Description</th>
-                            <th>Type</th>
-                            <th>Date</th>
-                            <!-- Order by Date Submitted-->
-                          </tr>
-                        </thead>
-                        <tbody>
-                          
-                        </tbody>
-                      </table>
-        </div>
-
-        <div id="past">
-                <table class="table table-dark table-striped">
-                        <thead>
-                          <tr>
-                            <th>Reimbursement Id</th>
-                            <th>Amount</th>
-                            <th>Description</th>
-                            <th>Type</th>
-                            <th>Date</th>
-                            <th>Status</th>
-                            <th>Resolver</th>
-                            <!-- Order by Date Submitted-->
-                          </tr>
-                        </thead>
-                        <tbody>
-                          
-                        </tbody>
-                      </table>
-        </div>
-
-         <!-- The Reimb Modal -->
+    <!-- The Reimb Modal -->
     <div class="modal fade" id="reimbModal">
-            <div class="modal-dialog">
-              <div class="modal-content">
-        
-                <!-- Reimb Modal Header -->
-                <div class="modal-header">
-                  <h4 class="modal-title">Add a Reimbursement</h4>
-                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-        
-                <!-- Reimb Modal body -->
-                <div class="modal-body">
-                  <div class="form-group">
-                    <label for="usr">Reimbursement Amount:</label>
-                    <input type="text" class="form-control" id="amount" name="amount">
-                  </div>
-                  <div class="form-group">
-                    <label for="pwd">Reimbursement Description:</label>
-                    <textarea class="form-control" rows="5" id="desc"></textarea>
-                  </div>
-                  <div class="form-group">
-                        <label for="sel1">Select Type:</label>
-                        <select class="form-control" id="sel1">
-                          <option>Lodging</option>
-                          <option>Travel</option>
-                          <option>Food</option>
-                          <option>Other</option>
-                        </select>
-                      </div>
-                  <button type="submit" class="btn btn-warning" id='to-add-reimb'>Submit</button>
-                </div>
-        
-                <!-- Login Modal footer -->
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                </div>
-        
-              </div>
-            </div>
+      <div class="modal-dialog">
+        <div class="modal-content">
+
+          <!-- Reimb Modal Header -->
+          <div class="modal-header">
+            <h4 class="modal-title">Add a Reimbursement</h4>
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
 
+          <!-- Reimb Modal body -->
+          <div class="modal-body">
+            <div class="form-group">
+              <label for="usr">Reimbursement Amount:</label>
+              <input type="text" class="form-control" id="amount" name="amount">
+            </div>
+            <div class="form-group">
+              <label for="pwd">Reimbursement Description:</label>
+              <textarea class="form-control" rows="5" id="desc"></textarea>
+            </div>
+            <div class="form-group">
+              <label for="sel1">Select Type:</label>
+              <select class="form-control" id="sel1">
+                <option>Lodging</option>
+                <option>Travel</option>
+                <option>Food</option>
+                <option>Other</option>
+              </select>
+            </div>
+            <button type="submit" class="btn btn-warning" data-dismiss="modal" id='to-add-reimb'>Submit</button>
+          </div>
+
+          <!-- Login Modal footer -->
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          </div>
+
+        </div>
+      </div>
     </div>
 
-    </div>
-    <script id="dynamic-js" src="../js/employee.js"></script>
-    <script src="../js/app.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-</body>
+  </div>
 
-</html>
+</div>
