wow I really hope this works i can't believe we're still alive

--- a/ERS_Project_1/src/main/webapp/partials/employee.html
+++ b/ERS_Project_1/src/main/webapp/partials/employee.html
@@ -16,11 +16,11 @@
       <table class="table table-dark table-striped">
         <thead>
           <tr>
-            <th>Reimbursement Id</th>
-            <th>Amount</th>
-            <th>Description</th>
-            <th>Type</th>
-            <th>Date</th>
+            <th name='reimId'>Reimbursement Id</th>
+            <th name='amount'>Amount</th>
+            <th name='desc'>Description</th>
+            <th name='type'>Type</th>
+            <th name='date'>Date</th>
             <!-- Order by Date Submitted-->
           </tr>
         </thead>
