--- a/ERS_Project_1/src/main/webapp/partials/employee.html
+++ b/ERS_Project_1/src/main/webapp/partials/employee.html
@@ -24,7 +24,7 @@
             <!-- Order by Date Submitted-->
           </tr>
         </thead>
-        <tbody>
+        <tbody id = "pending-table-body">
 
         </tbody>
       </table>
@@ -44,7 +44,7 @@
             <!-- Order by Date Submitted-->
           </tr>
         </thead>
-        <tbody>
+        <tbody id = 'past-table-body'>
 
         </tbody>
       </table>
