working on update functionality

--- a/ERS_Project_1/src/main/webapp/partials/employee.html
+++ b/ERS_Project_1/src/main/webapp/partials/employee.html
@@ -20,6 +20,7 @@
             <th name='amount'>Amount</th>
             <th name='desc'>Description</th>
             <th name='type'>Type</th>
+            <th name='author'>Author</th>
             <th name='date'>Date</th>
             <!-- Order by Date Submitted-->
           </tr>
@@ -38,8 +39,10 @@
             <th>Amount</th>
             <th>Description</th>
             <th>Type</th>
+            <th>Author</th>
             <th>Date</th>
             <th>Status</th>
+            <th>Resolved</th>
             <th>Resolver</th>
             <!-- Order by Date Submitted-->
           </tr>
