yes it is working, everything is there, she's just ugly

--- a/ERS_Project_1/src/main/webapp/partials/employee.html
+++ b/ERS_Project_1/src/main/webapp/partials/employee.html
@@ -21,7 +21,7 @@
             <th name='desc'>Description</th>
             <th name='type'>Type</th>
             <th name='author'>Author</th>
-            <th name='date'>Date</th>
+            <th name='date'>Submitted Date</th>
             <!-- Order by Date Submitted-->
           </tr>
         </thead>
@@ -40,7 +40,7 @@
             <th>Description</th>
             <th>Type</th>
             <th>Author</th>
-            <th>Date</th>
+            <th>Submitted Date</th>
             <th>Status</th>
             <th>Resolved</th>
             <th>Resolver</th>
