reworking employee dash

--- a/ERS_Project_1/src/main/webapp/partials/employee.html
+++ b/ERS_Project_1/src/main/webapp/partials/employee.html
@@ -3,7 +3,7 @@
     <div id="mySidenav" class="sidebar">
       <a href="#">View your current Reimbursements</a>
       <a href="#">View your past Reimbursements</a>
-      <a href="#" data-toggle="modal" data-target="#reimbModal">Submit a new Reimbursement</a>
+      <a href="#" data-toggle="modal" data-target="#reimbModal">Submit a new Reimbursemetn</a>
       <a href="#">Logout</a>
     </div>
   </div>
@@ -90,6 +90,8 @@
           <div class="modal-footer">
             <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
           </div>
+
+          <button type="button" class="btn btn-warning data-toggle" data-toggle="modal" data-target="#reimbModal">Add a Reimbursement</button>
 
         </div>
       </div>
