finished Quality of LIfe updates

--- a/ERS_Project_1/src/main/webapp/css/employee.css
+++ b/ERS_Project_1/src/main/webapp/css/employee.css
@@ -4,3 +4,11 @@ body{
 #main{
   margin: 10%;
 }
+#pending-table{
+  margin:auto;
+  align-content: center;
+}
+#past-table{
+  margin:auto;
+  align-content: center;
+}
