--- a/ERS_Project_1/src/main/webapp/partials/employee.html
+++ b/ERS_Project_1/src/main/webapp/partials/employee.html
@@ -3,6 +3,7 @@
   <div id="main" class="content">
 
     <div id="pending">
+      <h1 id="pending-table">Pending Reimbursements</h1>
       <table class="table table-dark table-striped">
         <thead>
           <tr>
@@ -22,6 +23,7 @@
     </div>
 
     <div id="past">
+      <h1 id="past-table">Past Reimbursements</h1>
       <table class="table table-dark table-striped">
         <thead>
           <tr>
